--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Star Battle</title>
+    <title>Star Battle Firepads</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1060695164961482"
+crossorigin="anonymous"></script>
+<script async custom-element="amp-auto-ads"
+src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+<link rel=”canonical” href=”https://firepads.github.io"/>
+<meta name="google-adsense-account" content="ca-pub-1060695164961482">	
+
 </head>
 
 <body>
